volexc/tests/ui/check_undefined_type_array.out
Error: undefined type `UndefinedType`
   ╭─[check_undefined_type_array.vol:3:11]
   │
 3 │     bar: [UndefinedType]
   │           ──────┬──────  
   │                 ╰──────── not found
───╯