volexc/tests/ui/check_undefined_type_array.vol
// Undefined type in array
struct Foo {
    bar: [UndefinedType]
}
